--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <meta property="og:title" content="Pay To Go">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Сервис для быстрой оплаты счёта и чаевых в ресторанах и кафе">
+  <meta property="og:website" content="https://t1ep1l0t.github.io/paytogo_landing/#/">
+  <meta property="og:image" content="./src/assets/images/logotype.png">
     <title>Pay To Go</title>
   </head>
   <body>
